# hmailserver-master

./: .gitignore  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists_Modern.txt  DATABASE_SUPPORT.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  Dockerfile  INDIVIDUAL_MODULES_100_PERCENT.md  PERFECTION_ACHIEVED.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_OPTIMIZATION_COMPLETE.md  PHASE3_EXCELLENCE_ACHIEVED.md  PHASE_5_IMPLEMENTATION_PLAN.md  PROJECT_COMPLETION_SUCCESS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  SECURITY_CONFIGURATION.md  TOTAL_PERFECTION_ACHIEVED.md  TOTAL_PERFECTION_ACHIEVED_FINAL.md  UPGRADE_ANALYSIS_COMPLETE.md  UPGRADE_PLAN.md  UPGRADE_STATUS_LIVE.md  WindowsDeployment.ps1  WindowsInstaller.ps1  build.ps1  build_fixed.ps1  build_simple.ps1  demo_ai.py  phase1_test_results.json  test_phase1.py
config/: hMailServerNext.conf.in
config/mcp/: config.json
hmailserver/source/Server/hMailServer/: MainNext.cpp
implementation/Phase1_Foundation/: README.md
implementation/Phase1_Foundation/AI/: MCPClient.cpp  MCPClient.h  ai_engine.cppm  context_analyzer.py  email_classifier.py  requirements.txt
implementation/Phase1_Foundation/Engine/: ContextAwareEmailEngine.h  core_engine.cppm
implementation/Phase1_Foundation/Security/: AdvancedThreatDetection.cpp  AdvancedThreatDetection.h  SecureEmailHandler.cpp  SecureEmailHandler.h  ZeroTrustFramework.h  security_framework.cppm
implementation/Phase2_Intelligence/: dynamic_translator.py  fix_unicode.py  intelligent_router.py  phase2_test_results.json  predictive_composer.py  smart_summarizer.py  test_phase2.py  voice_to_email.py
implementation/Phase2_Intelligence/config/mcp/: config.json
implementation/Phase3_Autonomous/: __init__.py  autonomous_optimizer.py  phase3_autonomous_test_results_20250819_155644.json  phase3_validation_results_20250819_155831.json  phase3_validation_results_20250819_155921.json  phase3_validation_results_20250819_160129.json  phase3_validation_results_20250819_160528.json  predictive_scaler.py  quantum_operations.py  self_healing_system.py  simple_test_phase3.py  test_phase3.py  threat_intelligence.py
implementation/Phase4_WebInterface/: IMPLEMENTATION_SUMMARY.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
implementation/Phase4_WebInterface/.next/: prerender-manifest.json  react-loadable-manifest.json  trace
implementation/Phase4_WebInterface/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
implementation/Phase4_WebInterface/.next/cache/webpack/client-development/: index.pack.gz.old
implementation/Phase4_WebInterface/.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  5.pack  index.pack  index.pack.old
implementation/Phase4_WebInterface/.next/cache/webpack/edge-server-production/: index.pack  index.pack.old
implementation/Phase4_WebInterface/.next/cache/webpack/server-development/: index.pack.gz.old
implementation/Phase4_WebInterface/.next/cache/webpack/server-production/: 1.pack
implementation/Phase4_WebInterface/.next/server/: middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
implementation/Phase4_WebInterface/.next/server/app/: page.js  page_client-reference-manifest.js
implementation/Phase4_WebInterface/.next/server/vendor-chunks/: @socket.io.js  @tanstack.js  clsx.js  engine.io-client.js  engine.io-parser.js  has-flag.js  lucide-react.js  ms.js  next-themes.js  socket.io-client.js  socket.io-parser.js  supports-color.js  tailwind-merge.js  xmlhttprequest-ssl.js
implementation/Phase4_WebInterface/.next/static/chunks/: _app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsComponent_EDEL3XIZ_js.js  _app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsPanelComponent_RN252AT2_js.js  app-pages-internals.js  webpack.js
implementation/Phase4_WebInterface/.next/static/chunks/app/: layout.js  page.js
implementation/Phase4_WebInterface/.next/static/css/app/: layout.css
implementation/Phase4_WebInterface/.next/types/app/: layout.ts  page.ts
implementation/Phase4_WebInterface/src/app/: globals.css  layout.tsx  page.tsx
implementation/Phase4_WebInterface/src/app/api/auth/login/: route.ts
implementation/Phase4_WebInterface/src/app/api/dashboard/activity/: route.ts
implementation/Phase4_WebInterface/src/app/api/dashboard/stats/: route.ts
implementation/Phase4_WebInterface/src/app/login/: page.tsx
implementation/Phase4_WebInterface/src/components/: auth-provider.tsx  client-providers.tsx  dashboard.tsx  socket-provider.tsx
implementation/Phase4_WebInterface/src/components/ui/: loading-spinner.tsx  toaster.tsx
implementation/Phase4_WebInterface/src/lib/: utils.ts
implementation/Production_Integration/: DEPLOYMENT_GUIDE.md  README.md  ai_bridge_service.py  deploy.sh  docker-compose.production.yml  gateway_service.cs  web_integration.ts
